--- a/styles.css
+++ b/styles.css
@@ -304,7 +304,7 @@ body {
     font-weight: 300 !important;
     letter-spacing: 2px !important;
     display: inline-block !important;
-    padding: 10px 20px !important;
+    padding: 10px 20px 0 20px !important;
     text-decoration: none !important;
     transition: 0.3s ease !important;
 }
